src/app/globals.css
:root {
  --color-primary: #202c39;
  --color-secondary: #34495b;
  --color-less-highlight: #f2d492;
  --color-highlight: #f29559;
  --color-misc: #b8b08d;
  --color-text: white;
  --color-text-muted: #b0bec5;

  --color-maplist: #00897b;
  --color-experts: #3949ab;
  --color-nostalgia-pack: #039be5;

  --bs-btn-success: #198754;
}

body {
  background-color: var(--color-primary);
  color: var(--color-text);
  min-height: 100vh;
  display: flex;
}

a,
a:visited,
.a,
.a:visited {
  color: var(--color-highlight);
  transition: color 0.1s linear;
}

a:hover,
.a:hover {
  color: var(--color-less-highlight);
}

.content {
  flex: 1;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.content > main {
  flex: 1;
}

body,
footer {
  font-family: var(--font-p);
}

.font-border {
  text-shadow: 2px 0 #000, -2px 0 #000, 0 2px #000, 0 -2px #000, 1px 1px #000,
    -1px -1px #000, 1px -1px #000, -1px 1px #000;
}

.offscreen {
  position: absolute;
  left: -9999px;
  top: -9999px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-oswald);
  margin-bottom: 1.5rem;
}

a.no-underline {
  text-decoration: none;
}

a > .panel {
  color: var(--color-text);
  transition: background-color 0.2s linear;
}

a > .panel:hover {
  background-color: var(--color-less-highlight);
}

.panel {
  background-color: var(--color-secondary);
  border: 1px solid var(--color-secondary);
  padding: 0.3rem 0.7rem;
  border-radius: 0.5rem;
  transition: background-color 0.2s linear;
}

.panel.disabled {
  background-color: #0000;
}

.panel.disabled > :not(.no-disable) {
  opacity: 0.3;
}

.panel-container {
  margin-top: 1rem;
  margin-bottom: 1rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.modal-panel .modal-content {
  background-color: var(--color-primary);
}

.p-relative {
  position: relative;
}

.muted {
  color: var(--color-text-muted);
}

.flex-vcenter {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.flex-hcenter {
  display: flex;
  justify-content: center;
}

.flex-row-space {
  row-gap: 0.5rem;
}

.flex-col-space {
  column-gap: 0.5rem;
}

.flex-1 {
  flex: 1;
}

.mono {
  font-family: Courier;
}

a.white-text {
  color: var(--color-text);
}

.bg-list {
  background-color: var(--color-maplist);
}

.bg-experts {
  background-color: var(--color-experts);
}

.notification {
  position: fixed;
  bottom: 1rem;
  left: 0.5rem;
}

.text-justify {
  text-align: justify;
}

.no-border {
  border: none !important;
}

/* https://stackoverflow.com/a/54924505/13033269 */
.yt-embed {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */
  height: 0;
}

.yt-embed iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

code {
  padding: 0.1rem 0.5rem;
  background-color: var(--color-primary);
  color: var(--color-less-highlight);
  border-radius: 0.3rem;
}

/* Buttons */

a .btn {
  color: var(--color-text);
}

.btn.big,
.btn-primary {
  font-weight: bold;
  font-family: var(--font-p);
  text-shadow: 2px 0 #000, -2px 0 #000, 0 2px #000, 0 -2px #000, 1px 1px #000,
    -1px -1px #000, 1px -1px #000, -1px 1px #000;
  font-size: calc(1rem + 0.2vw);
  border: 0;
}

.btn-primary {
  background-color: var(--color-secondary);
  color: white;
  transition: all 0.2s linear;
  border: 2px solid var(--color-primary);
}

.btn-primary:not(.width-auto) {
  min-width: 7rem;
}

.btn-primary:disabled {
  background-color: var(--color-secondary);
  border-color: var(--color-secondary);
}

.btn-primary.active {
  background-color: var(--color-highlight);
  border-color: var(--color-highlight);
}

.btn-primary:hover {
  background-color: var(--color-less-highlight);
  transition: all 0.2s linear;
  border-color: var(--color-less-highlight);
}

img.zoomable:hover {
  cursor: zoom-in;
}

.c-pointer:hover {
  cursor: pointer;
}

.c-zoom-in:hover {
  cursor: zoom-in;
}

.invalid-feedback {
  --shadow-clr: #000;
  text-shadow: 2px 0 var(--shadow-clr), -2px 0 var(--shadow-clr),
    0 2px var(--shadow-clr), 0 -2px var(--shadow-clr), 1px 1px var(--shadow-clr),
    -1px -1px var(--shadow-clr), 1px -1px var(--shadow-clr),
    -1px 1px var(--shadow-clr);
}

/* xs */
@media only screen and (max-width: 575.98px) {
  .lb-position {
    margin-left: -1rem;
  }
}

/* <=sm */
@media only screen and (max-width: 767.98px) {
  .lb-position {
    margin-left: -0.5rem;
  }
}

/* >sm */
@media only screen and (min-width: 767.98px) {
  .w-md-auto {
    width: auto !important;
  }
}

